--- a/src/template.html
+++ b/src/template.html
@@ -5,5 +5,109 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="blue-bg">
+        <div class="search-container">
+          <input
+            type="search"
+            name="search"
+            id="search"
+            placeholder="Enter location"
+          />
+          <button class="search-btn">
+            <svg
+              width="20px"
+              height="20px"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+              <g
+                id="SVGRepo_tracerCarrier"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></g>
+              <g id="SVGRepo_iconCarrier">
+                <path
+                  d="M17 17L21 21"
+                  stroke="#323232"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                ></path>
+                <path
+                  d="M19 11C19 15.4183 15.4183 19 11 19C6.58172 19 3 15.4183 3 11C3 6.58172 6.58172 3 11 3C15.4183 3 19 6.58172 19 11Z"
+                  stroke="#323232"
+                  stroke-width="2"
+                ></path>
+              </g>
+            </svg>
+          </button>
+        </div>
+        <div class="info-container">
+          <p class="place">
+            <svg
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              width="25"
+              height="25"
+            >
+              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+              <g
+                id="SVGRepo_tracerCarrier"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></g>
+              <g id="SVGRepo_iconCarrier">
+                <path
+                  d="M12 21C15.5 17.4 19 14.1764 19 10.2C19 6.22355 15.866 3 12 3C8.13401 3 5 6.22355 5 10.2C5 14.1764 8.5 17.4 12 21Z"
+                  stroke="#ffffff"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                ></path>
+                <path
+                  d="M12 13C13.6569 13 15 11.6569 15 10C15 8.34315 13.6569 7 12 7C10.3431 7 9 8.34315 9 10C9 11.6569 10.3431 13 12 13Z"
+                  stroke="#ffffff"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                ></path>
+              </g>
+            </svg>
+          </p>
+          <div class="icon-container">
+            <img class="overall-weather-icon" src="#" alt="weather icon" />
+          </div>
+          <p class="temp">23</p>
+          <p class="temp-feel">Feels like 21</p>
+          <p class="cloud-condition">Thunderclouds</p>
+          <div class="weather-info">
+            <div class="wind">
+              <img src="./images/wind-svgrepo-com.svg" alt="wind-icon" />
+              <p class="wind-measurement">13 km/h</p>
+              <p>wind</p>
+            </div>
+            <div class="humidity">
+              <img src="./images/humidity-alt-svgrepo-com.svg" />
+              <p class="humdity-measurement">24%</p>
+              <p>Humidity</p>
+            </div>
+            <div class="rain">
+              <img src="./images/rain-alt-svgrepo-com.svg" />
+              <p class="rain-measurement">87%</p>
+              <p>Rain</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="today">
+        <h3 class="weather-today">Weather Today</h3>
+        <div class="hourly-weather"></div>
+      </div>
+    </div>
+  </body>
 </html>
