Fix: moon image unresponsiveness

--- a/src/template.html
+++ b/src/template.html
@@ -132,7 +132,7 @@
                 <p class="astronomy-time moonset-time">6:16 AM</p>
               </div>
               <div class="moon-image"></div>
-              <div>
+              <div class="start">
                 <p class="small">Moonrise</p>
                 <p class="astronomy-time moonrise-time">11:42 PM</p>
               </div>
