Feat: Add responsive design to nav bar

--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Weather App</title>
   </head>
   <body>
     <div class="loading-screen">
@@ -265,7 +265,7 @@
               name="search"
               class="search"
               id="saved-search"
-              placeholder="Add a city..."
+              placeholder="Add city..."
             />
             <button class="search-btn" id="saved-search-btn">
               <svg
