--- a/src/template.html
+++ b/src/template.html
@@ -52,6 +52,10 @@
                 </g>
               </svg>
             </button>
+            <div
+              id="main-search-suggestions"
+              class="autocomplete-suggestions"
+            ></div>
           </div>
           <p class="place">
             <svg
@@ -70,14 +74,14 @@
               <g id="SVGRepo_iconCarrier">
                 <path
                   d="M12 21C15.5 17.4 19 14.1764 19 10.2C19 6.22355 15.866 3 12 3C8.13401 3 5 6.22355 5 10.2C5 14.1764 8.5 17.4 12 21Z"
-                  stroke="#eeeeee"
+                  stroke="#000000"
                   stroke-width="2"
                   stroke-linecap="round"
                   stroke-linejoin="round"
                 ></path>
                 <path
                   d="M12 13C13.6569 13 15 11.6569 15 10C15 8.34315 13.6569 7 12 7C10.3431 7 9 8.34315 9 10C9 11.6569 10.3431 13 12 13Z"
-                  stroke="#eeeeee"
+                  stroke="#000000"
                   stroke-width="2"
                   stroke-linecap="round"
                   stroke-linejoin="round"
@@ -244,14 +248,14 @@
               <g id="SVGRepo_iconCarrier">
                 <path
                   d="M12 21C15.5 17.4 19 14.1764 19 10.2C19 6.22355 15.866 3 12 3C8.13401 3 5 6.22355 5 10.2C5 14.1764 8.5 17.4 12 21Z"
-                  stroke="#eeeeee"
+                  stroke="#000000"
                   stroke-width="2"
                   stroke-linecap="round"
                   stroke-linejoin="round"
                 ></path>
                 <path
                   d="M12 13C13.6569 13 15 11.6569 15 10C15 8.34315 13.6569 7 12 7C10.3431 7 9 8.34315 9 10C9 11.6569 10.3431 13 12 13Z"
-                  stroke="#eeeeee"
+                  stroke="#000000"
                   stroke-width="2"
                   stroke-linecap="round"
                   stroke-linejoin="round"
@@ -297,6 +301,10 @@
                 </g>
               </svg>
             </button>
+            <div
+              id="saved-search-suggestions"
+              class="autocomplete-suggestions"
+            ></div>
           </div>
           <div class="location-wrapper">
             <div class="location">
